# my_mlops_repo

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  dummy.dockerfile  evaluate.dockerfile  model.pth  pyproject.toml  requirements.txt  tasks.py  train.dockerfile  wandb.dockerfile
.github/workflows/: codecheck.yaml  tests.yaml
configs/: config.yaml  test_config.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: epoch=0-val_loss=0.28.ckpt  epoch=7-val_loss=0.25-v1.ckpt  epoch=7-val_loss=0.25.ckpt  epoch=8-val_loss=0.23-v1.ckpt  epoch=8-val_loss=0.23.ckpt  epoch=9-val_loss=0.25-v1.ckpt  epoch=9-val_loss=0.25.ckpt  model.pth  trained_model_1.pth
src/my_mlops_project/: data.py  evaluate.py  lightning_model.py  lightning_train_test.py  model.py  my_logger_hydra.py  train.py  visualize.py
tests/: test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20250109_193859-cqyf8jy7/: run-cqyf8jy7.wandb
wandb/run-20250109_194322-9no1i1bs/: run-9no1i1bs.wandb
wandb/run-20250109_194438-8etlofhl/: run-8etlofhl.wandb
wandb/run-20250109_194742-d5gvgieh/: run-d5gvgieh.wandb
wandb/run-20250109_195237-eo3e6xwk/: run-eo3e6xwk.wandb
wandb/run-20250109_195725-bf8fmlhl/: run-bf8fmlhl.wandb
wandb/run-20250109_200727-jn43dvco/: run-jn43dvco.wandb
wandb/run-20250109_202245-rkj7b6la/: run-rkj7b6la.wandb
wandb/run-20250109_202316-z7x0y07z/: run-z7x0y07z.wandb
wandb/run-20250109_202342-av112nu3/: run-av112nu3.wandb
wandb/run-20250109_221155-w60hrnma/: run-w60hrnma.wandb
(+83 files in other folders)
